--- a/modernscientificcomputing/1.1-devices.md
+++ b/modernscientificcomputing/1.1-devices.md
@@ -1,8 +1,8 @@
 @def title = "Lecture 1: Understanding our computers"
-# Lecture 1: All you need to know about performance
+# Lecture 1: The computational power of our devices
 
 Scientific computing is a combination of scientific applications, mathematical modeling and high performance computing.
-The first lecture focuses on understanding the performance of our computing devices and how to measure it.
+The first lecture focuses on understanding our computing devices and understand how to get high performance from them.
 
 ## Required knowledge
 * Knows how to open a linux shell
@@ -10,8 +10,10 @@ The first lecture focuses on understanding the performance of our computing devi
 
 ## What limits the computing speed?
 It is well known that the mathematicall modeling and algorithm is important to how fast an algorithm can run. But this is not the only important factor that related to performance.
-You implement your algorithm and by type a program using your keyboard, while verifying the inputs through your monitor. The string you typed is stored in the main memory. A compiler reads this string and translates it into a format that computers can execute: the binary, in an optimized way.
+You implement your algorithm and by type a program using your keyboard, while verifying the inputs through your monitor. The string you typed is stored in the main memory.
+A compiler reads this string and translates it into a format that your computing device can execute: the binary, in an optimized way.
 The binary encodes instructions, which can be an arithematic/logical operation on registers, transfering data from the main memory to registers and vise versa, or branching.
+For different computing devices, the instruction sets can be very different.
 When you start executing the binary, the operating system creates a new process for it and allocated required computing time, memory and I/O resources for it.
 Even if you may have multiple processes running on the same CPU core, the operating system can schedule them properly by deviding the computing time into slices of length several milliseconds.
 The computing device crunch the instructions in the memory by loading them to the instruction register first.
@@ -22,16 +24,36 @@ There are only tens of such registers in a CPU.
 Before doing any arithematic operation, CPU must load the data from the main memory to a register through the system bus, after executing the data manipulation instruction, the result is copied back to the main memory.
 
 The performance is related to the algorithm implementation, the optimization done by the compiler, the scheduling mechanism of your operating system and how fast a processor process instruction.
-The compiler transforms your code into its equivalent form (meaning giving the same output as the original form for any input) with given static information in your code. The static information includes the type information and constants. Generally speaking, the more static information the compiler knows about your computation, the faster code it can generate.
-The computing device also matters. A modern computer works in the time unit of a CPU clock cycle, which is typically 0.3ns, providing an lower bound for the computing time of a single instruction.
-Reducing the number of instructions is important but is not the only goal since some instructions may cost much more time than others.
-In each time unit, a CPU core can do at most one instruction in principle. However, the data transfer instructions for manipulating the main memory usually cost much more than a CPU clock cycle.
-The direct reason is the memory stick works in a much lower speed than CPU.
-A more fundamental reason is speed limitation of information propagation, i.e. the speed of light.
+The compiler transforms your code into its equivalent form (meaning giving the same output as the original form for any input) with given static information in your code.
+The static information includes the type information and constants. Generally speaking, the more static information the compiler knows about your computation, the faster code it can generate.
+
+A modern CPU works in the time unit of a CPU clock cycle, which is typically 0.3ns.
+A CPU may have multiple cores, and each core may crunch multiple data a time, namely, single instruction multiple data (SIMD).
+Another type of computing device is the graphical processing unit (GPU).
+Modern GPUs are efficient at manipulating computer graphics and image processing.
+Their parallel structure makes them more efficient than general-purpose central processing units (CPUs) for algorithms that process large blocks of data in parallel.
+
+## Memory bandwidth and latency
+Memory bandwidth is the speed of data transmission speed from the main memory to the registers, which is much slower than the speed of computing devices manipulating the data.
+To get the designed peak performance from your computing devices, you need to perform a certain number of operations on a data before moving it out of your computing devices.
+The expected arithmetic indensity is defined as the ratio between the FLOPS and data rate, which is equal to the number of operations to be done on a data to equate the time spent on data transmission and manipulation.
+
+|     | Intel | NVIDIA A100 |
+| --- | --- | --- |
+| Peak FP64 GFLOPS   | 179   | 19500   |
+| Memory bandwidth (GB/s)   | 45.8   | 1555   |
+| Expected arithmetic intensity   | 31   | 100  |
+| Latency   |    |   |
+
+> NOTE: FP64 data type uses 8 bytes (or 64 bits) to represent a floating point number. Since Intel does not provide peak GFLOPS information for its CPUs, the Peak FP64 GFLOPS for Intel CPU is measured by benchmarking as will be shown bellow.
+
+Reducing the data transmission time is not the only goal since the memory latency is often the bottleneck of a program.
+Memory latency is the time between the data loading requesting and the data is ready to operate. The fundamental reason why memory latency must be small is due to the speed limitation of information propagation, i.e. the speed of light.
 
 > Quiz: Given information can not be propagated in a speed faster than the light and the distance between the memory stick and the CPU is 10cm, what is the lower bound of the time loading a data from the memory to a register?
 
-To overcome the limitation given by the constraint of physical locallity, engineers designed a complicated 3-level caching system that exists in the majority of our modern computers.
+One of the main differences between CPUs and GPUs are their different approaches to solve the latency issue.
+CPUs are highly optimized for reducing the latency, i.e. to solve a task as soon as possible. Engineers designed a complicated 3-level caching system for CPUs that exists in the majority of our modern computers.
 Caches belongs to the static random access memory (SRAM), which is much faster to access than the main memory or the dynamic random access memory (DRAM) we talk about in our daily life.
 ![](/assets/arch.png)
 As is illustrated in the figure, by the order of decreasing speed and increasing size, caches include fastest L1 cache working in the same speed as CPU, slower L2 cache, and the slowest L3 cache but still faster than the DRAM.
@@ -42,7 +64,12 @@ The wisdom behind the caching system is data locality, i.e. whenever a data is u
 When loading a 32/64-bit data from the memory to a register, the computer loads a chunk of data to the caches.
 The wisdom behind this design is the locallity of data using, i.e. a data is much more likely to be used if it is physically close to the data currently in use.
 
-Given a specific computing device, operating system and compiler, a high-performance implementation should take the compiling and hardware features into consideration.
+GPUs hide the latency issues by launching a lot of threads at the same time.
+When one thread gets stuck and waiting, a GPU simply trys to find another thread that is about to execute. Without enough threads, a GPU will be latency bottlenecked.
+In Compute Unified Device Architecture (CUDA) programming, the number of CUDA cores determines the number of threads that can be simultaneously executed.
+CUDA cores are very similar to CPU cores, while the number of which can easily go up to several thousand, they are not as independent as CPU cores.
+The style of the execution of CUDA programs are called single instruction multiple threads (SIMT), in which multiple data can be processed by a single instruction.
+While the style how CPU cores work is called multiple instruction multiple data (MIMD), which does not require all threads to execute the same instruction.
 
 ## Hands on: Get CPU and memory information
 ### The computing power of a CPU
@@ -222,7 +249,6 @@ BenchmarkTools.Trial: 281 samples with 1 evaluation.
  Memory estimate: 0 bytes, allocs estimate: 0.
 ```
 
-### Storage Hierachy
 ```bash
 $ lsmem
 RANGE                                  SIZE  STATE REMOVABLE  BLOCK
@@ -235,4 +261,20 @@ Total online memory:    39.9G
 Total offline memory:      0B
 ```
 
+### The computing power of a GPU
+
+```bash
+$ nvidia-smi
+```
+
+The NVIDIA V100 GPU has 5,120 CUDA cores, the theoretical computing power can be computed as
+```
+NVIDIA V100 GPU single precision FLOPS = 5120 (number of CUDA cores)
+    * 1380 (GPU clock rate)
+    * 2 (multiplication and add can happen at the same GPU clock)
+```
+
+
 ## References
+1. [https://www2.eecs.berkeley.edu/Pubs/TechRpts/2016/EECS-2016-143.pdf](https://www2.eecs.berkeley.edu/Pubs/TechRpts/2016/EECS-2016-143.pdf)
+2. [Youtube video]()
