--- a/modernscientificcomputing/1.2-tools.md
+++ b/modernscientificcomputing/1.2-tools.md
@@ -1,5 +1,5 @@
-@def title = "Lecture 1.2: Tools"
-# Lecture 1.2: Tools
+@def title = "Lecture 1.2: A Minimum Introduction to Linux, Vim and Git"
+# Lecture 1.2: A Minimum Introduction to Linux, Vim and Git
 We choose the Linux operating system as the programming platform,
 the Github website as the place to put your code,
 the Julia language as the programming language for implementing algorithms, VSCode as the Julia language editor and Pluto notebooks as the slides for the course.
@@ -26,10 +26,16 @@ vim     # Vi IMproved, a programmer's text editor
 git     # the stupid content tracker
 ```
 
+A more detailed [cheat sheet](https://cheatography.com/davechild/cheat-sheets/linux-command-line/) and a [lecture](https://missing.csail.mit.edu/2020/shell-tools/) are available online.
+
 ### SSH
 Connect to the AWS host for this course.
 
+To learn more about SSH and two factor authentication, please check [this lecture](https://missing.csail.mit.edu/2020/security/).
+
 ### Vim editor
+You will find a vim editor in any Linux distribution, with or without a graphical user interface. To edit a file, just type `vim file_name`.
+
 ```
 i       # input
 :w      # write
@@ -41,6 +47,8 @@ CTRL-R  # redo
 ```
 All the commands must be executed in the command mode (the default mode when you start a vim editor),
 If you are currently in the input mode, you can alway type `ESC` to go back to the command mode.
+
+To learn more about Vim, please check this [lecture](https://missing.csail.mit.edu/2020/editors/).
 
 ## A cheatsheet for Git and Github
 
@@ -79,6 +87,8 @@ git pull  # Fetch from and integrate with another repo or a local branch
 git fetch   # Download objects and refs from another repository
 git push    # Update remote refs along with associated objects
 ```
+
+A more detailed introduction could be found in this [lecture](https://missing.csail.mit.edu/2020/version-control/).
 
 ### Examples
 1. create a new git repo and make your first commit
@@ -168,7 +178,7 @@ Then you need to install [Revise](https://github.com/timholy/Revise.jl), which i
 ```julia
 julia> using Pkg; Pkg.add("Revise")
 ```
-To exit Julia REPL, just press <kbd>Ctrl</kbd>+<kbd>D</kbd>.
+To exit Julia REPL, just press `CTRL`-`D`.
 
 As a final step, please your Julia configuration by openning a Julia REPL and type
 ```julia
