--- a/modernscientificcomputing/1.2-tools.md
+++ b/modernscientificcomputing/1.2-tools.md
@@ -15,6 +15,9 @@ mkdir   # make directories
 rm      # remove files or directories
 pwd     # print name of current/working directory
 
+echo    # display a line of text
+cat     # concatenate files and print on the standard output
+
 alias   # create an alias for a command
 
 lscpu   # display information about the CPU architecture
