--- a/modernscientificcomputing/1.3-juliasetup.md
+++ b/modernscientificcomputing/1.3-juliasetup.md
@@ -1,4 +1,7 @@
 @def title = "Lecture 1.3: The Julia programming language"
 # Lecture 1.3: The Julia programming language
 
-## Package development
+This tutorial only covers the basic knowledge required for this course.
+
+## Hands On
+### Package development
