--- a/posts/2022-12-30-chains.md
+++ b/posts/2022-12-30-chains.md
@@ -1,6 +1,6 @@
-@def title = "Chains"
+@def title = "Solving random walk on graphs with tails"
 
-# Chains
+# Solving random walk on graphs with tails
 
 ## References
 
