update cluster debugging

--- a/posts/2023-07-30-cluster.md
+++ b/posts/2023-07-30-cluster.md
@@ -15,7 +15,7 @@ To avoid repeated typing password, one could use `ssh-copy-id` command, [read mo
 Edit `.bashrc` or `.zshrc` by adding the following two lines
 ```bash
 export JULIAUP_SERVER=https://mirror.nju.edu.cn/julia-releases/
-export JULIAUP_SERVER=https://mirror.nju.edu.cn/julia-releases/
+export JULIA_PKG_SERVER=http://cn-southeast.pkg.juliacn.com
 ```
 
 Install Juliaup and Julia with
