--- a/posts/2019-04-02-einsumbp.md
+++ b/posts/2019-04-02-einsumbp.md
@@ -109,12 +109,10 @@ $$
 
 where $dCS$ and $SdD$ has zero real part in diagonal elements. So that $dS = \Re[{\rm diag}(dP)]$. 
 
-$$
-\begin{align}
+\begin{align*}
 d\mathcal{L} &= {\rm Tr}\left[\overline{A}^TdA+\overline{A^*}^TdA^*\right]\\
 &= {\rm Tr}\left[\overline{A}^TdA+dA^\dagger\overline{A}^*\right] ~~~~~~~\#rule~3
-\end{align}
-$$
+\end{align*}
 
 Easy to show $\overline A_s = U^*\overline SV^T$. Notice here, $\overline A$ is the **derivative** rather than **gradient**, they are different by a conjugate, this is why we have transpose rather than conjugate here. see my [complex valued autodiff blog](https://giggleliu.github.io/2018/02/01/complex_bp.html) for detail.
 
@@ -155,12 +153,12 @@ $$
 Here, we defined $J=F\circ(U^T\overline U)$.
 
 $$
-\begin{align}
+\begin{align*}
 d\mathcal L &= {\rm Tr} (dPS+SdP^\dagger)(J+J^\dagger)^T\\
 &= {\rm Tr} dPS(J+J^\dagger)^T+h.c.\\
 &= {\rm Tr} U^\dagger dA V S(J+J^\dagger)^T+h.c.\\
 &= {\rm Tr}\left[ VS(J+J^\dagger)^TU^\dagger\right] dA+h.c.
-\end{align}
+\end{align*}
 $$
 
 By comparing with $d\mathcal L = {\rm Tr}\left[\overline{A}^TdA+h.c. \right]$, we have
@@ -182,13 +180,11 @@ $$
 
 Should be independent of the choice of gauge $\Lambda$, which is defined as ${\rm diag}(e^i\phi, ...)$
 
-$$
-\begin{align}
+\begin{align*}
 d\mathcal{L} &={\rm Tr}[ \overline{U\Lambda}^T d(U\Lambda) +\overline  SdS+\overline{V\Lambda}^Td(V\Lambda)] + h.c.\\
 &={\rm Tr}[ \overline {U\Lambda}^T (dU\Lambda+Ud\Lambda) +\overline{S}dS+  \overline{V\Lambda}^T(Vd\Lambda +dV\Lambda)] + h.c.\\
 &= {\rm Tr}[(\overline{U\Lambda}^TU+\overline{V\Lambda}^TV )d\Lambda ] + \ldots + h.c.
-\end{align}
-$$
+\end{align*}
 
 Gauge invariance refers to
 
@@ -200,23 +196,19 @@ For any $\Lambda$, where $I$ refers to the diagonal mask matrix. It is of cause 
 
 Consider the contribution from the **diagonal imaginary part**, we have
 
-$$
-\begin{align}
+\begin{align*}
 &{\rm Tr} [\overline U^T U (I \circ \Im [dC])+\overline V^T V (I \circ \Im [dD^\dagger])] + h.c.\\
 &={\rm Tr} [ I \circ (\overline U^T U)\Im [dC]-I\circ (\overline V^T V) \Im [dD]] +h.c. ~~~~~~~~~~~~~~\#  rule 1\\
 &={\rm Tr} [ I \circ (\overline U^T U)(\Im [dC]+ \Im [dD])] \\
 &={\rm Tr}[I\circ (\overline U^T U) \Im[dP]S^{-1}]  \\
 &={\rm Tr}[S^{-1}\Lambda_J U^{\dagger}dA V]\\
-\end{align}
-$$
+\end{align*}
 
 where $\Lambda_J  = \Im[I\circ(\overline U^TU)]= \frac 1 2I\circ(\overline U^TU)-h.c.$, with $I$ the mask for diagonal part. Since only the real part contribute to $\delta \mathcal{L}$ (the imaginary part will be canceled by the Hermitian conjugate counterpart), we can safely move $\Im$ from right to left.
 
-$$
-\begin{align}
+\begin{align*}
 \color{red}{\bar A_{U+V}^{(\rm imag)} = U^*\Lambda_J S^{-1}V^T}
-\end{align}
-$$
+\end{align*}
 
 **Thanks  [@refraction-ray](https://github.com/refraction-ray) (Shixin Zhang) for sharing his idea in the first time. This is the [issue for discussion](https://github.com/tensorflow/tensorflow/issues/13641#issuecomment-526976200). His arXiv preprint is coming out soon.**
 
@@ -224,20 +216,16 @@ $$
 
 When $U$ is **not full rank**, this formula should take an extra term (Ref. 2)
 
-$$
-\begin{align}
+\begin{align*}
 \bar A_U^{(\rm real)} &=U^*(J+J^\dagger)SV^T + (VS^{-1}\overline U^T(I-UU^\dagger))^T
-\end{align}
-$$
+\end{align*}
 
 
 Similarly, for $V​$ we have
 
-$$
-\begin{align}
+\begin{align*}
 \overline A_V^{(\rm real)} &=U^*S(K+K^\dagger)V^T + (U S^{-1} \overline V^T (I - VV^\dagger))^*,
-\end{align}
-$$
+\end{align*}
 
 where $K=F\circ(V^T\overline V)​$.
 
@@ -257,14 +245,12 @@ $$
 
 This convention is used in **tensorflow**, **Zygote.jl**. Which is
 
-$$
-\begin{align}
+\begin{align*}
 \mathcal{\overline A} =& U(\mathcal{J}+\mathcal{J}^\dagger)SV^\dagger + (I-UU^\dagger)\mathcal{\overline U}S^{-1}V^\dagger\\
 &+ U\overline SV^\dagger\\
 &+US(\mathcal{K}+\mathcal{K}^\dagger)V^\dagger + U S^{-1} \mathcal{\overline V}^\dagger (I - VV^\dagger)\\
 &\color{red}{+\frac 1 2 U (I\circ(U^\dagger\overline U)-h.c.)S^{-1}V^\dagger}
-\end{align}
-$$
+\end{align*}
 
 where $J=F\circ(U^\dagger\mathcal{\overline U})$ and $K=F\circ(V^\dagger \mathcal{\overline V})$.
 
