--- a/posts/2022-12-30-chains.md
+++ b/posts/2022-12-30-chains.md
@@ -37,39 +37,39 @@ Let us decompose the wave function on the graph into three parts.
 
 $$
 \begin{equation*}\label{eq:threeparts}
-|\psi\rangle = |\psi_G\rangle + \sum_v |\psi_v\rangle - \sum_v a_v|0_v\rangle
+|\psi\rangle = |\psi\rangle_G + \sum_v |\psi\rangle_v - \sum_v a_v|0_v\rangle
 \end{equation*}
 $$
-where $|\psi_G\rangle = \sum_{v\in V}|v\rangle\langle v|\psi\rangle$ (note in our definition, $|v\rangle = |0_v\rangle$), $|\psi_v\rangle = \sum_{n=0}^\infty|n_v\rangle\langle n_v|\psi\rangle$ and $a_v = \langle 0_v|\psi_G\rangle = \langle 0_v|\psi\rangle_v$.
+where $|\psi\rangle_G = \sum_{v\in V}|v\rangle\langle v|\psi\rangle$ (note in our definition, $|v\rangle = |0_v\rangle$), $|\psi\rangle_v = \sum_{n=0}^\infty|n_v\rangle\langle n_v|\psi\rangle$ and $a_v = \langle 0_v|\psi\rangle_G = \langle 0_v|\psi\rangle_v$.
 
 To solve the eigen-decomposition problem $H |\psi\rangle = E|\psi\rangle$, we have
 $$
 \begin{align*}\label{eq:hpsi}
-H |\psi\rangle &= H_G |\psi_G\rangle \textcolor{lightgray}{+ H_G\sum_v(|\psi_v\rangle - a_v|0_v\rangle)}\\
-&\textcolor{lightgray}{+\sum_v H_v (|\psi_G\rangle - \sum_{v'} a_{v'}|0_{v'}\rangle)} + \sum_v H_v|\psi_v\rangle
+H |\psi\rangle &= H_G |\psi\rangle_G \textcolor{lightgray}{+ H_G\sum_v(|\psi\rangle_v - a_v|0_v\rangle)}\\
+&\textcolor{lightgray}{+\sum_v H_v (|\psi\rangle_G - \sum_{v'} a_{v'}|0_{v'}\rangle)} + \sum_v H_v|\psi\rangle_v
 \end{align*}
 $$
 where gray parts are zeroed out.
 
 ### Propagating states
-Let us **assume** $|\psi_v\rangle = I_v|-k\rangle + R_v|k\rangle$, we have
+Let us **assume** $|\psi\rangle_v = I_v|-k\rangle + R_v|k\rangle$, we have
 $$a_v = I_v+R_v. \label{eq:av}$$
 By inserting \eqref{eq:chain} to \eqref{eq:hpsi}, we have
 $$\label{eq:hpsiprop}
-H |\psi\rangle = H_G |\psi_G\rangle + \sum_v \cos(k)|\psi_v\rangle - \left(\frac{I_v}{2}e^{ik} + \frac{R_v}{2}e^{-ik}\right)|0_v\rangle
+H |\psi\rangle = H_G |\psi\rangle_G + \sum_v \cos(k)|\psi\rangle_v - \left(\frac{I_v}{2}e^{ik} + \frac{R_v}{2}e^{-ik}\right)|0_v\rangle
 $$
 For this ansatz, the eigenvalue of $H$ has to be $E=\cos(k)$. By using \eqref{eq:threeparts} and \eqref{eq:av}
 $$
 \begin{align*}
-&\cos(k) \left(|\psi_G\rangle \textcolor{lightgray}{+ \sum_v |\psi_v\rangle} - \sum_v (I_v + R_v)|0_v\rangle\right) \\
-= &H_G |\psi_G\rangle \textcolor{lightgray}{+ \sum_v \cos(k)|\psi_v\rangle} - \sum_v\left(\frac{I_v}{2}e^{ik} + \frac{R_v}{2}e^{-ik}\right)|0_v\rangle
+&\cos(k) \left(|\psi\rangle_G \textcolor{lightgray}{+ \sum_v |\psi\rangle_v} - \sum_v (I_v + R_v)|0_v\rangle\right) \\
+= &H_G |\psi\rangle_G \textcolor{lightgray}{+ \sum_v \cos(k)|\psi\rangle_v} - \sum_v\left(\frac{I_v}{2}e^{ik} + \frac{R_v}{2}e^{-ik}\right)|0_v\rangle
 \end{align*}
 $$
 
 That is
 $$
 \begin{align*}
-H_G|\psi_G\rangle = &\cos(k) |\psi\rangle_G+ \sum_{v}\left(-\cos(k)(I_v + R_v) +\frac{I_v}{2}e^{ik} + \frac{R_v}{2}e^{-ik}\right)|0_v\rangle\\
+H_G|\psi\rangle_G = &\cos(k) |\psi\rangle_G+ \sum_{v}\left(-\cos(k)(I_v + R_v) +\frac{I_v}{2}e^{ik} + \frac{R_v}{2}e^{-ik}\right)|0_v\rangle\\
 = &\cos(k) |\psi\rangle_G- \sum_{v}\left(\frac{I_v}{2}e^{-ik} + \frac{R_v}{2}e^{ik}\right)|0_v\rangle
 \end{align*}
 $$
@@ -78,7 +78,7 @@ Let us **assume** the scattering is from vertex $w$, i.e. $I_w = 1$ and $I_{v\ne
 We have
 $$\label{eq:standardform}
 \begin{align*}
-H_G|\psi_G\rangle = &\cos(k) |\psi\rangle_G-\frac{1}{2}e^{-ik}|0_w\rangle - \sum_{v}\frac{R_v}{2}e^{ik}|0_v\rangle
+H_G|\psi\rangle_G = &\cos(k) |\psi\rangle_G-\frac{1}{2}e^{-ik}|0_w\rangle - \sum_{v}\frac{R_v}{2}e^{ik}|0_v\rangle
 \end{align*}
 $$
 
@@ -87,8 +87,8 @@ $$
 Let $z = e^{ik}$, we have
 $$\label{eq:standardform}
 \begin{align*}
-&2H_G z|\psi_G\rangle = (1+z^2) |\psi\rangle_G-|0_w\rangle - \sum_{v}R_vz^2|0_v\rangle\\
-&(1 - 2H_G z|\psi_G\rangle + Q z^2)|\psi\rangle_G = (1-z^2)|0_w\rangle
+&2H_G z|\psi\rangle_G = (1+z^2) |\psi\rangle_G-|0_w\rangle - \sum_{v}R_vz^2|0_v\rangle\\
+&(1 - 2H_G z + Q z^2)|\psi\rangle_G = (1-z^2)|0_w\rangle
 \end{align*}
 $$
 
@@ -109,23 +109,23 @@ Except the $-2$ before $H_G$ due to the difference in convension, \eqref{eq:stan
 ### Bound states
 There are two types of bound states. The first type with $|\psi\rangle_v = 0$ is trivial.
 In the following, we discuss the second type: $k = i\kappa$ is pure imaginary.
-Let us **assume** $$\label{eq:psibound}|\psi_v\rangle = a_v|\kappa\rangle$$ with $|\kappa\rangle = e^{-\kappa n_v} |n_v\rangle$.
+Let us **assume** $$\label{eq:psibound}|\psi\rangle_v = a_v|\kappa\rangle$$ with $|\kappa\rangle = e^{-\kappa n_v} |n_v\rangle$.
 Following the same derivation from \eqref{eq:hpsiprop} to \eqref{eq:standardform}, we have
 $$
-H |\psi\rangle = H_G |\psi_G\rangle + \sum_v \cosh(\kappa)|\psi_v\rangle - \frac{a_v}{2}e^{\kappa}|0_v\rangle
+H |\psi\rangle = H_G |\psi\rangle_G + \sum_v \cosh(\kappa)|\psi\rangle_v - \frac{a_v}{2}e^{\kappa}|0_v\rangle
 $$
 For this ansatz, the eigenvalue of $H$ has to be $E=\cosh(\kappa)$. By using \eqref{eq:threeparts} and \eqref{eq:psibound}
 $$
 \begin{align*}
-&\cosh(\kappa) \left(|\psi_G\rangle \textcolor{lightgray}{+ \sum_v |\psi_v\rangle} - \sum_v a_v|0_v\rangle\right) \\
-= &H_G |\psi_G\rangle \textcolor{lightgray}{+ \sum_v \cosh(\kappa)|\psi_v\rangle} - \sum_v\frac{a_v}{2}e^{\kappa}|0_v\rangle,\\
-&H_G|\psi_G\rangle = \cosh(\kappa) |\psi\rangle_G - \sum_{v}\frac{a_v}{2}e^{-\kappa}|0_v\rangle\\
+&\cosh(\kappa) \left(|\psi\rangle_G \textcolor{lightgray}{+ \sum_v |\psi\rangle_v} - \sum_v a_v|0_v\rangle\right) \\
+= &H_G |\psi\rangle_G \textcolor{lightgray}{+ \sum_v \cosh(\kappa)|\psi\rangle_v} - \sum_v\frac{a_v}{2}e^{\kappa}|0_v\rangle,\\
+&H_G|\psi\rangle_G = \cosh(\kappa) |\psi\rangle_G - \sum_{v}\frac{a_v}{2}e^{-\kappa}|0_v\rangle\\
 \end{align*}
 $$
 
 Let $z_b = e^{-\kappa}$, we have a new quadratic linear equation for the bounded states
 
 $$\label{eq:standardformb}
-(1-2H_Gz_b+Qz_b^2)|\psi_G\rangle = 0
+(1-2H_Gz_b+Qz_b^2)|\psi\rangle_G = 0
 $$
 
